...
        placeholder: viewModel.emailPlaceholder,
        text: $viewModel.emailOrPhone,
        keyboardType: .emailAddress,
        textContentType: .emailAddress,
        autocapitalization: .never
      )
      .accessibilityIdentifier("email_input")

      BrandTextField(
        title: viewModel.passwordFieldTitle,
        placeholder: viewModel.passwordPlaceholder,
        text: $viewModel.password,
        icon: "brand-lock",
        isSecure: true,
        textContentType: .password,
        autocapitalization: .never
      )
      .accessibilityIdentifier("password_input")

      Button {
        viewModel.forgotPassword()
      } label: {
        Text(viewModel.forgotPasswordLabel)
          .font(.system(size: 14, weight: .bold))
...
